# config

./: README.md
git/: default_branch_name.md  default_editor.md  set_up_credentials.md
hyprland/: find_smb_share.md  gtk_hsl_recolour.py  hyprpolkit.md  keybinds.md  layouts  login_manager.md  make_caps_lock_a_ctrl.md  network_bridge_for_vm.md  noctalia.md  prepare_for_vm.md  set_up_KoolDots.md  workspaces.md
hyprland/dotfiles/: hypridle.conf  hyprland.lua  pacman.md
hyprland/dotfiles/fastfetch/: config.jsonc
hyprland/dotfiles/noctalia/: settings.toml
hyprland/dotfiles/noctalia/palettes/: Carmine.json
hyprland/from_scratch/: install_hyprland.md
hyprland/gtk_themes/: README.md
hyprland/gtk_themes/Material-Black-Carmine-strong/assets/: sed.sh
hyprland/gtk_themes/Material-Black-Carmine-strong/cinnamon/: cinnamon.css
hyprland/gtk_themes/Material-Black-Carmine-strong/gnome-shell/: gnome-shell.css  pad-osd.css
hyprland/gtk_themes/Material-Black-Carmine-strong/gtk-3.0/: gtk.css
hyprland/gtk_themes/Material-Black-Carmine-strong/gtk-4.0/: gtk.css
hyprland/gtk_themes/Material-Black-Carmine-strong/metacity-1/: metacity-theme-2.xml
hyprland/gtk_themes/Material-Black-Carmine-strong/openbox-3/: themerc
hyprland/gtk_themes/Material-Black-Carmine/assets/: unsed.sh
hyprland/gtk_themes/Material-Black-Carmine/cinnamon/: cinnamon.css
hyprland/gtk_themes/Material-Black-Carmine/gnome-shell/: gnome-shell.css  pad-osd.css
hyprland/hyprcursor/Nordzy-text-dash-patch/: README.md  text.hlc
project_setup/: clang_format_everything.md  clangformat_fish.fish  cmake_cheat_sheet.md  cpp_with_cmake_and_gtest.md  zed_test_debug.py
project_setup/cpp_with_cmake_and_gtest/executable/: CMakeLists.txt
recipes/: jarzynowka.md
vscode/: auto_save.md  autocomplete_parentheses.md  middle_mouse_paste.md
zed/: msvc_developer_prompt.md  windows_clangd_header_files.md
(+6 files in other folders)
